--- a/rostem-client/src/index.css
+++ b/rostem-client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../src/resources/green_back.png);
+  background-image: url(../src/resources/backgroundImg.jpg);
   background-size: cover;
   margin: 0;
   padding: 0;
